feat(server): 增加 GM 诊断能力并重构运行时基础
增加临时密码、按玩家封包监听与过滤、后台任务指标和管理 API。

引入虚拟线程 ThreadManager、原子 WZ 资源注册与热重载、数据库自动建库和统一启动初始化。

删除已被模块级测试替代的旧 bootstrap E2E/架构测试，并补齐对应单元与集成测试。